--- a/smartshare/Cargo.toml
+++ b/smartshare/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0.116"
 tracing-subscriber = {version="0.3.18", features=["env-filter"]}
 operational-transform = { version = "0.6.1", features = ["serde"] }
 ropey = "1.6.1"
+clap = { version = "4.5.4", features = ["derive"] }
 
 [[bin]]
 name = "client"
